@@ -12,7 +12,7 @@
 package com.maxprograms.converters.html;
 
 import java.io.ByteArrayInputStream;
-import java.io.FileInputStream;
+import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.System.Logger;
@@ -20,13 +20,24 @@ import java.lang.System.Logger.Level;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.StringTokenizer;
 
 import javax.xml.parsers.ParserConfigurationException;
+
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Attribute;
+import org.jsoup.nodes.Attributes;
+import org.jsoup.nodes.CDataNode;
+import org.jsoup.nodes.Comment;
+import org.jsoup.nodes.DataNode;
+import org.jsoup.nodes.DocumentType;
+import org.jsoup.nodes.FormElement;
+import org.jsoup.nodes.Node;
+import org.jsoup.nodes.XmlDeclaration;
+import org.xml.sax.SAXException;
 
 import com.maxprograms.converters.Constants;
 import com.maxprograms.converters.Utils;
@@ -38,8 +49,6 @@ import com.maxprograms.xml.SAXBuilder;
 import com.maxprograms.xml.TextNode;
 import com.maxprograms.xml.XMLNode;
 
-import org.xml.sax.SAXException;
-
 public class Html2Xliff {
 
 	private static String inputFile;
@@ -47,18 +56,8 @@ public class Html2Xliff {
 	private static String sourceLanguage;
 	private static String srcEncoding;
 
-	private static FileOutputStream output;
-	private static FileOutputStream skeleton;
-
 	private static int segId;
 	private static int tagId;
-
-	private static List<String> segments;
-	private static Map<String, String> startsSegment;
-	private static Map<String, List<String>> translatableAttributes;
-	private static Map<String, String> entities;
-	private static Map<String, String> ctypes;
-	private static Map<String, String> keepFormating;
 
 	private static boolean segByElement;
 	private static boolean keepFormat;
@@ -70,6 +69,15 @@ public class Html2Xliff {
 	private static String targetLanguage;
 
 	private static SAXBuilder builder;
+	private static StringBuffer segmentText;
+
+	private static List<String> inlineElements = Arrays.asList("a", "abbr", "acronym", "audio", "b", "bdi", "bdo",
+			"big", "br", "button", "canvas", "cite", "code", "data", "datalist", "del", "dfn", "em", "embed", "i",
+			"iframe", "img", "input", "ins", "kbd", "label", "map", "mark", "meter", "noscript", "object", "output",
+			"picture", "progress", "q", "ruby", "s", "samp", "script", "select", "slot", "small", "span", "strong",
+			"sub", "sup", "svg", "template", "textarea", "time", "u", "tt", "var", "video", "wbr");
+
+	private static List<String> translatableAttributes = Arrays.asList("alt", "label", "placeholder", "title");
 
 	private Html2Xliff() {
 		// do not instantiate this class
@@ -90,42 +98,26 @@ public class Html2Xliff {
 		if (paragraphSegmentation == null) {
 			segByElement = false;
 		} else {
-			if (paragraphSegmentation.equals("yes")) {
-				segByElement = true;
-			} else {
-				segByElement = false;
-			}
+			segByElement = paragraphSegmentation.equals("yes");
 		}
+		segmentText = new StringBuffer();
 		try {
+			org.jsoup.nodes.Document htmlDoc = Jsoup.parse(new File(inputFile), srcEncoding);
+			builder = new SAXBuilder();
 			if (!segByElement) {
 				String initSegmenter = params.get("srxFile");
 				segmenter = new Segmenter(initSegmenter, sourceLanguage, new Catalog(catalog));
 			}
-			try (FileInputStream input = new FileInputStream(inputFile)) {
-				skeleton = new FileOutputStream(skeletonFile);
-				output = new FileOutputStream(xliffFile);
-				writeHeader();
-
-				int size = input.available();
-				byte[] array = new byte[size];
-				if (size != input.read(array)) {
-					result.add(Constants.ERROR);
-					result.add(Messages.getString("Html2Xliff.1"));
-					return result;
+			try (FileOutputStream xlf = new FileOutputStream(xliffFile)) {
+				try (FileOutputStream skl = new FileOutputStream(skeletonFile)) {
+					writeHeader(xlf);
+					recurse(htmlDoc, skl, xlf);
+					writeTail(xlf);
 				}
-				String file = new String(array, srcEncoding);
-				buildTables();
-				buildList(file);
-				processList();
-
-				skeleton.close();
-				writeString("</body>\n");
-				writeString("</file>\n");
-				writeString("</xliff>");
-				output.close();
 			}
 			result.add(Constants.SUCCESS);
 		} catch (IOException | SAXException | ParserConfigurationException | URISyntaxException e) {
+			e.printStackTrace();
 			Logger logger = System.getLogger(Html2Xliff.class.getName());
 			logger.log(Level.ERROR, Messages.getString("Html2Xliff.2"), e);
 			result.add(Constants.ERROR);
@@ -134,145 +126,201 @@ public class Html2Xliff {
 		return result;
 	}
 
-	private static void writeHeader() throws IOException {
+	private static void recurse(Node node, FileOutputStream skl, FileOutputStream xlf)
+			throws IOException, SAXException, ParserConfigurationException {
+		if (node instanceof org.jsoup.nodes.Document doc) {
+			// root node, nothing to translate
+			// simply iterate its children
+		}
+		if (node instanceof DocumentType docType) {
+			write(skl, docType.toString());
+		}
+		if (node instanceof org.jsoup.nodes.Element element && !(node instanceof org.jsoup.nodes.Document)) {
+
+			boolean inline = inlineElements.contains(element.nodeName());
+			boolean emptyElement = element.childNodes().isEmpty();
+
+			if (!isTranslatable(element)) {
+				write(skl, element.toString());
+				return;
+			}
+
+			if (hasTranslatableAttributes(element)) {
+				segmentText.append(getTranslatableHead(element));
+			} else {
+				if (!inline) {
+					write(skl, getHead(element));
+				} else {
+					if (emptyElement) {
+						segmentText.append("<ph id=\"");
+						segmentText.append(tagId++);
+						segmentText.append("\">");
+						segmentText.append(getHead(element));
+						segmentText.append(element.toString());
+						segmentText.append("</ph>");
+					} else {
+						segmentText.append("<ph id=\"");
+						segmentText.append(tagId++);
+						segmentText.append("\">");
+						segmentText.append(getHead(element));
+						segmentText.append("</ph>");
+					}
+				}
+			}
+		}
+		if (node instanceof org.jsoup.nodes.TextNode text) {
+			segmentText.append(text.getWholeText());
+		}
+		if (node instanceof CDataNode cdata) {
+			write(skl, cdata.toString());
+		}
+		if (node instanceof Comment comment) {
+			write(skl, comment.toString());
+		}
+		if (node instanceof DataNode data) {
+			write(skl, data.toString());
+		}
+		if (node instanceof FormElement form) {
+			// process form elements
+		}
+		if (node instanceof XmlDeclaration decl) {
+			write(skl, decl.toString());
+		}
+
+		// process children nodes
+		List<Node> children = node.childNodes();
+		Iterator<Node> it = children.iterator();
+		while (it.hasNext()) {
+			recurse(it.next(), skl, xlf);
+		}
+
+		if (node instanceof org.jsoup.nodes.Element element && !(node instanceof org.jsoup.nodes.Document)) {
+			// finish processing element content
+			boolean inline = inlineElements.contains(element.nodeName());
+			boolean emptyElement = element.childNodes().isEmpty();
+
+			if (!inline) {
+				writeSegment(xlf, skl, segmentText.toString());
+				segmentText = new StringBuffer();
+			}
+
+			if (!emptyElement) {
+				if (inline) {
+					// close inline
+					segmentText.append("<ph id=\"");
+					segmentText.append(tagId++);
+					segmentText.append("\">&lt;/");
+					segmentText.append(element.nodeName());
+					segmentText.append("&gt;</ph>");
+				} else {
+					// send closing tag to skeleton
+					write(skl, "</" + element.nodeName() + ">");
+				}
+			}
+		}
+	}
+
+	private static String getTranslatableHead(org.jsoup.nodes.Element element) {
+		StringBuilder sb = new StringBuilder();
+		sb.append("<ph>&lt;");
+		sb.append(element.nodeName());
+		Attributes atts = element.attributes();
+		List<Attribute> attsList = atts.asList();
+		Iterator<Attribute> it = attsList.iterator();
+		while (it.hasNext()) {
+			Attribute a = it.next();
+			sb.append(' ');
+			sb.append(a.getKey());
+			sb.append("=\"");
+			if (translatableAttributes.contains(a.getKey().toLowerCase())) {
+				sb.append("</ph>");
+				sb.append(Utils.cleanString(a.getValue()));
+				sb.append("<ph>");
+			} else {
+				sb.append(Utils.cleanString(a.getValue()));
+			}
+			sb.append('\"');
+		}
+		sb.append("&gt;</ph>");
+		return sb.toString();
+	}
+
+	private static boolean hasTranslatableAttributes(org.jsoup.nodes.Element element) {
+		Attributes atts = element.attributes();
+		Iterator<String> it = translatableAttributes.iterator();
+		while (it.hasNext()) {
+			if (atts.hasKeyIgnoreCase(it.next())) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	private static String getHead(org.jsoup.nodes.Element element) {
+		StringBuilder sb = new StringBuilder();
+		sb.append('<');
+		sb.append(element.nodeName());
+		Attributes atts = element.attributes();
+		List<Attribute> list = atts.asList();
+		Iterator<Attribute> it = list.iterator();
+		while (it.hasNext()) {
+			sb.append(' ');
+			sb.append(it.next().toString());
+		}
+		sb.append(element.childNodes().isEmpty() ? "/>" : ">");
+		return sb.toString();
+	}
+
+	private static boolean isTranslatable(org.jsoup.nodes.Element element) {
+		Attributes atts = element.attributes();
+		boolean translate = true;
+		if (atts.hasKeyIgnoreCase("translate")) {
+			translate = !atts.getIgnoreCase("translate").equalsIgnoreCase("no");
+		}
+		return translate;
+	}
+
+	private static void writeHeader(FileOutputStream xlf) throws IOException {
 		String tgtLang = "";
 		if (targetLanguage != null) {
 			tgtLang = "\" target-language=\"" + targetLanguage;
 		}
-		writeString("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-		writeString("<xliff version=\"1.2\" xmlns=\"urn:oasis:names:tc:xliff:document:1.2\" "
+		write(xlf, "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
+		write(xlf, "<xliff version=\"1.2\" xmlns=\"urn:oasis:names:tc:xliff:document:1.2\" "
 				+ "xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" "
 				+ "xsi:schemaLocation=\"urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd\">\n");
-		writeString("<file original=\"" + cleanString(inputFile) + "\" source-language=\"" + sourceLanguage + tgtLang
-				+ "\" tool-id=\"" + Constants.TOOLID + "\" datatype=\"html\">\n");
+		write(xlf,
+				"  <file original=\"" + Utils.cleanString(inputFile) + "\" source-language=\"" + sourceLanguage
+						+ tgtLang
+						+ "\" tool-id=\"" + Constants.TOOLID + "\" datatype=\"html\">\n");
 
-		writeString("<header>\n");
-		writeString("   <skl>\n");
-		writeString("      <external-file href=\"" + Utils.cleanString(skeletonFile) + "\"/>\n");
-		writeString("   </skl>\n");
-		writeString("   <tool tool-version=\"" + Constants.VERSION + " " + Constants.BUILD + "\" tool-id=\""
+		write(xlf, "    <?encoding " + srcEncoding + "?>\n");
+		write(xlf, "    <header>\n");
+		write(xlf, "      <skl>\n");
+		write(xlf, "        <external-file href=\"" + Utils.cleanString(skeletonFile) + "\"/>\n");
+		write(xlf, "     </skl>\n");
+		write(xlf, "     <tool tool-version=\"" + Constants.VERSION + " " + Constants.BUILD + "\" tool-id=\""
 				+ Constants.TOOLID + "\" tool-name=\"" + Constants.TOOLNAME + "\"/>\n");
-		writeString("</header>\n");
-		writeString("<?encoding " + srcEncoding + "?>\n");
-		writeString("<body>\n");
+		write(xlf, "    </header>\n");
+		write(xlf, "    <body>\n");
 	}
 
-	private static void processList() throws IOException, SAXException, ParserConfigurationException {
-		for (int i = 0; i < segments.size(); i++) {
-			String text = segments.get(i);
-			if (isTranslateable(text)) {
-				extractSegment(text);
-			} else {
-				// send directly to skeleton
-				writeSkeleton(text);
-			}
-		}
+	private static void writeTail(FileOutputStream xlf) throws IOException {
+		write(xlf, "    </body>\n");
+		write(xlf, "  </file>\n");
+		write(xlf, "</xliff>");
 	}
 
-	private static void extractSegment(String seg) throws IOException, SAXException, ParserConfigurationException {
-
-		// start by making a smaller list
-
-		List<String> miniList = new ArrayList<>();
-
-		int start = seg.indexOf('<');
-		int end = seg.indexOf('>');
-		String text = "";
-
-		while (start != -1) {
-			if (start > 0) {
-				// add initial text
-				miniList.add(seg.substring(0, start));
-				seg = seg.substring(start);
-				start = seg.indexOf('<');
-				end = seg.indexOf('>');
-			}
-			// add the tag
-			if (end < seg.length()) {
-				miniList.add(seg.substring(start, end + 1));
-				seg = seg.substring(end + 1);
-				start = seg.indexOf('<');
-				end = seg.indexOf('>');
-			} else {
-				miniList.add(seg);
-				start = -1;
-			}
-		}
-		if (seg.length() > 0) {
-			// add trailing characters
-			miniList.add(seg);
-		}
-
-		int size = miniList.size();
-		int i;
-		// separate initial text
-		String initial = "";
-		for (i = 0; i < size; i++) {
-			text = miniList.get(i);
-			if (!isTranslateable(text)) {
-				initial = initial + text;
-			} else {
-				break;
-			}
-		}
-
-		// get translatable
-		String translatable = text;
-		for (i++; i < size; i++) {
-			translatable = translatable + miniList.get(i);
-		}
-
-		// get trailing text
-		String trail = "";
-		int j;
-		for (j = size - 1; j > 0; j--) {
-			String t = miniList.get(j);
-			if (!isTranslateable(t)) {
-				trail = t + trail;
-			} else {
-				break;
-			}
-		}
-
-		// remove trailing from translatable
-		start = translatable.lastIndexOf(trail);
-		if (start != -1) {
-			translatable = translatable.substring(0, start);
-		}
-
-		writeSkeleton(initial);
-		String tagged = addTags(translatable);
-		if (containsText(tagged)) {
-			translatable = tagged;
-			if (segByElement) {
-				String[] frags = translatable.split("\u2029");
-				for (int m = 0; m < frags.length; m++) {
-					writeSegment(frags[m]);
-				}
-			} else {
-				String[] frags = translatable.split("\u2029");
-				for (int m = 0; m < frags.length; m++) {
-					String[] segs = segmenter.segment(frags[m]);
-					for (int h = 0; h < segs.length; h++) {
-						writeSegment(segs[h]);
-					}
-				}
-			}
-		} else {
-			writeSkeleton(translatable);
-		}
-		writeSkeleton(trail);
-	}
-
-	private static void writeSegment(String segment) throws IOException, SAXException, ParserConfigurationException {
+	private static void writeSegment(FileOutputStream xlf, FileOutputStream skl, String segment)
+			throws IOException, SAXException, ParserConfigurationException {
 		segment = segment.replace("\u2029", "");
 		String pure = removePH(segment);
-		if (pure.trim().isEmpty()) {
-			writeSkeleton(phContent(segment));
+		if (pure.isBlank()) {
+			write(skl, phContent(segment));
 			return;
 		}
-		if (segment.trim().isEmpty()) {
-			writeSkeleton(segment);
+		if (segment.isBlank()) {
+			write(skl, segment);
 			return;
 		}
 
@@ -281,18 +329,18 @@ public class Html2Xliff {
 
 		segment = segmentCleanup(segment);
 
-		writeSkeleton(first);
+		write(skl, first);
 		tagId = 0;
-		writeString("   <trans-unit id=\"" + segId + "\" xml:space=\"preserve\" approved=\"no\">\n"
-				+ "      <source>");
+		write(xlf, "      <trans-unit id=\"" + segId + "\" xml:space=\"preserve\" approved=\"no\">\n"
+				+ "        <source>");
 		if (keepFormat) {
-			writeString(segment);
+			write(xlf, segment);
 		} else {
-			writeString(normalize(segment));
+			write(xlf, normalize(segment));
 		}
-		writeString("</source>\n   </trans-unit>\n");
+		write(xlf, "</source>\n      </trans-unit>\n");
 
-		writeSkeleton("%%%" + segId++ + "%%%\n" + last);
+		write(skl, "%%%" + segId++ + "%%%" + last);
 	}
 
 	private static String segmentCleanup(String segment)
@@ -398,663 +446,7 @@ public class Html2Xliff {
 		return rs;
 	}
 
-	private static String addTags(String src) {
-		String result = "";
-		int start = src.indexOf('<');
-		int end = src.indexOf('>');
-
-		while (start != -1) {
-			if (start > 0) {
-				result = result + cleanString(src.substring(0, start));
-				src = src.substring(start);
-				start = src.indexOf('<');
-				end = src.indexOf('>');
-			}
-			String element = src.substring(start, end + 1);
-			// check if we don't fall in a trap
-			// from Adobe GoLive
-			int errors = element.indexOf('<', 1);
-			if (errors != -1) {
-				// there is a "<" inside quotes
-				// must move manually until the end
-				// of the element avoiding angle brackets
-				// within quotes
-				boolean exit = false;
-				boolean inQuotes = false;
-				StringBuilder buffer = new StringBuilder();
-				buffer.append("<");
-				int k = 0;
-				while (!exit) {
-					k++;
-					char c = src.charAt(start + k);
-					if (c == '\"') {
-						inQuotes = !inQuotes;
-					}
-					buffer.append(c);
-					if (!inQuotes && c == '>') {
-						exit = true;
-					}
-				}
-				element = buffer.toString();
-				end = start + buffer.toString().length();
-			}
-
-			String tagged = tag(element);
-			result = result + tagged;
-
-			src = src.substring(end + 1);
-
-			start = src.indexOf('<');
-			end = src.indexOf('>');
-		}
-		result = result + cleanString(src);
-		return result;
+	private static void write(FileOutputStream out, String string) throws IOException {
+		out.write(string.getBytes(StandardCharsets.UTF_8));
 	}
-
-	private static String tag(String element) {
-		String result = "";
-		String type = getType(element);
-		if (translatableAttributes.containsKey(type)) {
-			result = extractAttributes(type, element);
-			if (result.indexOf("\u2029") == -1) {
-				String ctype = "";
-				if (ctypes.containsKey(type)) {
-					ctype = " ctype=\"" + ctypes.get(type) + "\"";
-				}
-				result = "<ph id=\"" + tagId++ + "\"" + ctype + ">" + cleanString(element) + "</ph>";
-			}
-		} else {
-			String ctype = "";
-			if (ctypes.containsKey(type)) {
-				ctype = " ctype=\"" + ctypes.get(type) + "\"";
-			}
-			result = "<ph id=\"" + tagId++ + "\"" + ctype + ">" + cleanString(element) + "</ph>";
-		}
-		return result;
-	}
-
-	private static String cleanString(String s) {
-		int control = s.indexOf('&');
-		while (control != -1) {
-			int sc = s.indexOf(';', control);
-			if (sc == -1) {
-				// no semicolon, it's not an entity
-				s = s.substring(0, control) + "&amp;" + s.substring(control + 1);
-			} else {
-				// may be an entity
-				String candidate = s.substring(control, sc) + ";";
-				if (!(candidate.equals("&amp;") || candidate.equals("&gt;") || candidate.equals("&lt;"))) {
-					String entity = entities.get(candidate);
-					if (entity != null) {
-						s = s.substring(0, control) + entity + s.substring(sc + 1);
-					} else {
-						if (candidate.startsWith("&#x")) {
-							// numeric entity in hex, get its value
-							int ch = Integer.parseInt(candidate.substring(3, candidate.indexOf(';')), 16);
-							s = s.substring(0, control) + (char) ch + s.substring(sc + 1);
-						} else if (candidate.startsWith("&#")) {
-							// numeric entity in decimal
-							int ch = Integer.parseInt(candidate.substring(2, candidate.indexOf(';')));
-							s = s.substring(0, control) + (char) ch + s.substring(sc + 1);
-						} else if (candidate.equals("&nbsp;")) {
-							s = s.substring(0, control) + "\u00A0" + s.substring(sc + 1);
-						} else if (candidate.equals("&copy;")) {
-							s = s.substring(0, control) + "\u00A9" + s.substring(sc + 1);
-						} else {
-							// ugly, this should never happen
-							s = s.substring(0, control) + "%%%ph id=\"" + tagId++ + "\"%%%&amp;"
-									+ candidate.substring(1) + "%%%/ph%%%" + s.substring(sc + 1);
-						}
-					}
-				}
-			}
-			if (control < s.length()) {
-				control++;
-			}
-			control = s.indexOf('&', control);
-		}
-
-		control = s.indexOf('<');
-		while (control != -1) {
-			s = s.substring(0, control) + "&lt;" + s.substring(control + 1);
-			if (control < s.length()) {
-				control++;
-			}
-			control = s.indexOf('<', control);
-		}
-
-		control = s.indexOf('>');
-		while (control != -1) {
-			s = s.substring(0, control) + "&gt;" + s.substring(control + 1);
-			if (control < s.length()) {
-				control++;
-			}
-			control = s.indexOf('>', control);
-		}
-		s = s.replace("%%%/ph%%%", "</ph>");
-		s = s.replace("%%%ph", "<ph");
-		s = s.replace("\"%%%&amp;", "\">&amp;");
-		return s;
-	}
-
-	private static void writeSkeleton(String string) throws IOException {
-		skeleton.write(string.getBytes(StandardCharsets.UTF_8));
-	}
-
-	private static void writeString(String string) throws IOException {
-		output.write(string.getBytes(StandardCharsets.UTF_8));
-	}
-
-	private static boolean isTranslateable(String string) {
-
-		keepFormat = false;
-
-		//
-		// remove CDATA sections
-		//
-		int startComment = string.indexOf("<![CDATA[");
-		int endComment = string.indexOf("]]>");
-		while (startComment != -1 || endComment != -1) {
-			if (startComment != -1) {
-				if (endComment == -1) {
-					string = string.substring(0, startComment);
-				} else {
-					if (startComment < endComment) {
-						string = string.substring(0, startComment) + string.substring(endComment + 3);
-					} else {
-						string = string.substring(endComment + 3, startComment);
-					}
-				}
-			} else {
-				if (endComment != -1) {
-					string = string.substring(endComment + 3);
-				}
-			}
-			startComment = string.indexOf("<![CDATA[");
-			endComment = string.indexOf("]]>");
-		}
-		//
-		// remove IGNORE sections
-		//
-		startComment = string.indexOf("<![IGNORE[");
-		endComment = string.indexOf("]]>");
-		while (startComment != -1 || endComment != -1) {
-			if (startComment != -1) {
-				if (endComment == -1) {
-					string = string.substring(0, startComment);
-				} else {
-					if (startComment < endComment) {
-						string = string.substring(0, startComment) + string.substring(endComment + 3);
-					} else {
-						string = string.substring(endComment + 3, startComment);
-					}
-				}
-			} else {
-				if (endComment != -1) {
-					string = string.substring(endComment + 3);
-				}
-			}
-			startComment = string.indexOf("<![IGNORE[");
-			endComment = string.indexOf("]]>");
-		}
-		//
-		// remove IGNORE sections
-		//
-		startComment = string.indexOf("<![INCLUDE[");
-		endComment = string.indexOf("]]>");
-		while (startComment != -1 || endComment != -1) {
-			if (startComment != -1) {
-				if (endComment == -1) {
-					string = string.substring(0, startComment);
-				} else {
-					if (startComment < endComment) {
-						string = string.substring(0, startComment) + string.substring(endComment + 3);
-					} else {
-						string = string.substring(endComment + 3, startComment);
-					}
-				}
-			} else {
-				if (endComment != -1) {
-					string = string.substring(endComment + 3);
-				}
-			}
-			startComment = string.indexOf("<![INCLUDE[");
-			endComment = string.indexOf("]]>");
-		}
-		//
-		// remove XML style comments
-		//
-		startComment = string.indexOf("<!--");
-		endComment = string.indexOf("-->");
-		while (startComment != -1 || endComment != -1) {
-			if (startComment != -1) {
-				if (endComment == -1) {
-					string = string.substring(0, startComment);
-				} else {
-					if (startComment < endComment) {
-						string = string.substring(0, startComment) + string.substring(endComment + 3);
-					} else {
-						string = string.substring(endComment + 3, startComment);
-					}
-				}
-			} else {
-				if (endComment != -1) {
-					string = string.substring(endComment + 3);
-				}
-			}
-			startComment = string.indexOf("<!--");
-			endComment = string.indexOf("-->");
-		}
-		//
-		// remove Processing Instruction
-		//
-		startComment = string.indexOf("<?");
-		endComment = string.indexOf("?>");
-		while (startComment != -1 || endComment != -1) {
-			if (startComment != -1) {
-				if (endComment == -1) {
-					string = string.substring(0, startComment);
-				} else {
-					string = string.substring(0, startComment) + string.substring(endComment + 2);
-				}
-			} else {
-				if (endComment != -1) {
-					string = string.substring(endComment + 2);
-				}
-			}
-			startComment = string.indexOf("<?");
-			endComment = string.indexOf("?>");
-		}
-		//
-		// remove C style comments
-		//
-		startComment = string.indexOf("/*");
-		endComment = string.indexOf("*/");
-		while (startComment != -1 || endComment != -1) {
-			if (startComment != -1) {
-				if (endComment == -1) {
-					string = string.substring(0, startComment);
-				} else {
-					if (startComment < endComment) {
-						string = string.substring(0, startComment) + string.substring(endComment + 2);
-					} else {
-						string = string.substring(endComment + 2, startComment);
-					}
-				}
-			} else {
-				if (endComment != -1) {
-					string = string.substring(endComment + 2);
-				}
-			}
-			startComment = string.indexOf("/*");
-			endComment = string.indexOf("*/");
-		}
-		//
-		// Start checking
-		//
-		int start = string.indexOf('<');
-		int end = string.indexOf('>');
-
-		String type;
-		String text = "";
-
-		while (start != -1) {
-			if (start > 0) {
-				text = text + cleanString(string.substring(0, start));
-				string = string.substring(start);
-				start = string.indexOf('<');
-				end = string.indexOf('>');
-			}
-			type = getType(string.substring(start, end));
-			keepFormat = keepFormating.containsKey(type);
-
-			if (type.equals("script") || type.equals("style")) {
-				return false;
-			}
-
-			// check for translatable attributes
-			if (translatableAttributes.containsKey(type)) {
-				return true;
-			}
-			if (type.startsWith("/") && translatableAttributes.containsKey(type.substring(1))) {
-				return true;
-			}
-			if (end < string.length()) {
-				string = string.substring(end + 1);
-			} else {
-				string = string.substring(end);
-			}
-			start = string.indexOf('<');
-			end = string.indexOf('>');
-		}
-
-		text = text + cleanString(string);
-
-		// look for non-white space
-
-		for (int i = 0; i < text.length(); i++) {
-			char c = text.charAt(i);
-			if (c == ' ' || c == '\n' || c == '\f' || c == '\t' || c == '\r' || c == '\u00A0' || c == '\u2007'
-					|| c == '\u202F' || c == '\uFEFF' || c == '>') {
-				continue;
-			}
-			return true;
-		}
-
-		return false;
-	}
-
-	private static String extractAttributes(String type, String element) {
-		String ctype = "";
-		if (ctypes.containsKey(type)) {
-			ctype = " ctype=\"" + ctypes.get(type) + "\"";
-		}
-		String result = "<ph id=\"" + tagId++ + "\"" + ctype + ">";
-		element = cleanString(element);
-
-		List<String> v = translatableAttributes.get(type);
-
-		StringTokenizer tokenizer = new StringTokenizer(element, "&= \t\n\r\f/", true);
-		while (tokenizer.hasMoreTokens()) {
-			String token = tokenizer.nextToken();
-			if (!v.contains(token.toLowerCase())) {
-				result = result + token;
-			} else {
-				result = result + token;
-				String s = tokenizer.nextToken();
-				while (s.equals("=") || s.equals(" ")) {
-					result = result + s;
-					s = tokenizer.nextToken();
-				}
-				// s contains the first word of the atttribute
-				if ((s.startsWith("\"") && s.endsWith("\"") || s.startsWith("'") && s.endsWith("'"))
-						&& s.length() > 1) {
-					// the value is one word and it is quoted
-					result = result + s.substring(0, 1) + "</ph>\u2029" + s.substring(1, s.length() - 1)
-							+ "\u2029<ph id=\"" + tagId++ + "\">" + s.substring(s.length() - 1);
-				} else {
-					if (s.startsWith("\"") || s.startsWith("'")) {
-						// attribute value is quoted, but it has more than one word
-						String quote = s.substring(0, 1);
-						result = result + s.substring(0, 1) + "</ph>\u2029" + s.substring(1);
-						s = tokenizer.nextToken();
-						do {
-							result = result + s;
-							s = tokenizer.nextToken();
-						} while (s.indexOf(quote) == -1);
-						String left = s.substring(0, s.indexOf(quote));
-						String right = s.substring(s.indexOf(quote));
-						result = result + left + "\u2029<ph id=\"" + tagId++ + "\">" + right;
-					} else {
-						// attribute is not quoted, it can only be one word
-						result = result + "</ph>\u2029" + s + "\u2029<ph id=\"" + tagId++ + "\">";
-					}
-				}
-			}
-		}
-		result = result + "</ph>";
-		return result;
-	}
-
-	private static void buildTables()
-			throws SAXException, IOException, ParserConfigurationException, URISyntaxException {
-
-		if (builder == null) {
-			builder = new SAXBuilder();
-		}
-		Catalog cat = new Catalog(catalog);
-		builder.setEntityResolver(cat);
-		Document doc = builder.build(Html2Xliff.class.getResource("init_html.xml"));
-		Element root = doc.getRootElement();
-		List<Element> tags = root.getChildren("tag");
-
-		startsSegment = new HashMap<>();
-		translatableAttributes = new HashMap<>();
-		entities = new HashMap<>();
-		ctypes = new HashMap<>();
-		keepFormating = new HashMap<>();
-
-		Iterator<Element> i = tags.iterator();
-		while (i.hasNext()) {
-			Element t = i.next();
-			if (t.getAttributeValue("hard-break", "inline").equals("segment")) {
-				startsSegment.put(t.getText(), "yes");
-			}
-			if (t.getAttributeValue("keep-format", "no").equals("yes")) {
-				keepFormating.put(t.getText(), "yes");
-			}
-			String attributes = t.getAttributeValue("attributes");
-			if (!attributes.isEmpty()) {
-				StringTokenizer tokenizer = new StringTokenizer(attributes, ";");
-				int count = tokenizer.countTokens();
-				List<String> v = new ArrayList<>(count);
-				for (int j = 0; j < count; j++) {
-					v.add(tokenizer.nextToken());
-				}
-				translatableAttributes.put(t.getText(), v);
-			}
-			String ctype = t.getAttributeValue("ctype");
-			if (!ctype.isEmpty()) {
-				ctypes.put(t.getText(), ctype);
-			}
-		}
-
-		doc = builder.build(Html2Xliff.class.getResource("entities.xml"));
-		root = doc.getRootElement();
-		List<Element> ents = root.getChildren("entity");
-		Iterator<Element> it = ents.iterator();
-		while (it.hasNext()) {
-			Element e = it.next();
-			entities.put("&" + e.getAttributeValue("name") + ";", e.getText());
-		}
-	}
-
-	private static void buildList(String file) throws IOException {
-		segments = new ArrayList<>();
-		int start = file.indexOf('<');
-		int end = file.indexOf('>');
-		String type;
-		String text = "";
-
-		if (start > 0) {
-			segments.add(file.substring(0, start));
-			file = file.substring(start);
-			start = file.indexOf('<');
-			end = file.indexOf('>');
-		}
-		while (start != -1) {
-			if (file.substring(start, start + 3).equals("<![")) {
-				end = file.indexOf("]]>") + 2;
-			}
-			if (end < start || end < 0 || start < 0) {
-				throw new IOException(Messages.getString("Html2Xliff.3"));
-			}
-			String element = file.substring(start, end + 1);
-
-			// check if the element is OK or has strange stuff
-			// from Adobe GoLive 5
-			int errors = element.indexOf('<', 1);
-			if (errors != -1 && !element.startsWith("<![")) {
-				// there is a "<" inside quotes
-				// must move manually until the end
-				// of the element avoiding angle brackets
-				// within quotes
-				boolean exit = false;
-				boolean inQuotes = false;
-				StringBuilder buffer = new StringBuilder();
-				buffer.append('<');
-				int k = 0;
-				while (!exit) {
-					k++;
-					char c = file.charAt(start + k);
-					if (c == '\"') {
-						inQuotes = !inQuotes;
-					}
-					buffer.append(c);
-					if (!inQuotes && c == '>') {
-						exit = true;
-					}
-				}
-				element = buffer.toString();
-				end = start + buffer.toString().length();
-				start = end;
-			}
-
-			type = getType(element);
-
-			if (type.equals("![INCLUDE[") || type.equals("![IGNORE[") || type.equals("![CDATA[")) {
-				// it's an SGML section, send it to skeleton
-				// and keep looking for segments
-				segments.add(text);
-				text = "";
-				end = file.indexOf("]]>");
-				segments.add(file.substring(start, end + 3));
-				file = file.substring(end + 3);
-				start = file.indexOf('<');
-				end = file.indexOf('>');
-				if (start != -1) {
-					text = file.substring(0, start);
-				}
-				continue;
-			}
-			if (startsSegment.containsKey(type)) {
-				segments.add(text);
-				file = file.substring(text.length());
-				start = start - text.length();
-				end = end - text.length();
-				text = "";
-			}
-			if (type.startsWith("/") && startsSegment.containsKey(type.substring(1))) {
-				segments.add(text);
-				file = file.substring(text.length());
-				start = start - text.length();
-				end = end - text.length();
-				text = "";
-			}
-			if (type.equals("script") || type.equals("style")) {
-				// send the whole element to the list
-				segments.add(text);
-				file = file.substring(text.length());
-				text = "";
-				if (!element.endsWith("/>")) {
-					end = file.toLowerCase().indexOf("/" + type + ">");
-					String script = file.substring(0, end + 2 + type.length());
-					if (script.indexOf("<!--") != -1 && script.indexOf("-->") == -1) {
-						// there are nested scripts inside this one
-						end = file.toLowerCase().indexOf("/" + type + ">", file.indexOf("-->") + 3);
-						script = file.substring(0, end + 2 + type.length());
-					}
-					segments.add(script);
-					file = file.substring(end + 2 + type.length());
-				} else {
-					segments.add(element);
-					file = file.substring(element.length());
-				}
-
-				start = file.indexOf('<');
-				end = file.indexOf('>');
-				if (start != -1) {
-					text = file.substring(0, start);
-				}
-				continue;
-			}
-			if (type.equals("!--")) {
-				// it's a comment, send it to skeleton
-				// and keep looking for segments
-				segments.add(text);
-				file = file.substring(text.length());
-				text = "";
-				end = file.indexOf("-->");
-				String comment = file.substring(0, end + 3);
-				segments.add(comment);
-				file = file.substring(end + 3);
-				start = file.indexOf('<');
-				end = file.indexOf('>');
-				if (start != -1) {
-					text = file.substring(0, start);
-				}
-				continue;
-			}
-
-			text = text + element;
-
-			if (end < file.length()) { // there may be text to extract
-				int nextTag = file.indexOf('<', end);
-				if (nextTag != -1) {
-					text += file.substring(end + 1, nextTag);
-				}
-			}
-
-			if (start < file.length()) {
-				start++;
-			}
-			if (end < file.length()) {
-				end = file.indexOf('>', end + 1);
-			} else {
-				end = file.length();
-			}
-			start = file.indexOf('<', start);
-		}
-		segments.add(text);
-	}
-
-	private static String getType(String string) {
-
-		String result = "";
-		if (string.startsWith("<![CDATA[")) {
-			return "![CDATA[";
-		}
-		if (string.startsWith("<![IGNORE[")) {
-			return "![IGNORE[";
-		}
-		if (string.startsWith("<![INCLUDE[")) {
-			return "![INCLUDE[";
-		}
-		if (string.startsWith("<!--")) {
-			return "!--";
-		}
-		if (string.startsWith("<?")) {
-			return "?";
-		}
-
-		if (!string.isEmpty()) {
-			// skip initial "<"
-			string = string.substring(1);
-		}
-
-		for (int i = 0; i < string.length(); i++) {
-			char c = string.charAt(i);
-			if (c == ' ' || c == '\n' || c == '\f' || c == '\t' || c == '\r' || c == '>') {
-				break;
-			}
-			result = result + c;
-		}
-		if (result.endsWith("/") && result.length() > 1) {
-			result = result.substring(0, result.length() - 1);
-		}
-		return result.toLowerCase();
-	}
-
-	private static boolean containsText(String string) {
-		StringBuilder buffer = new StringBuilder();
-		int length = string.length();
-		boolean inTag = false;
-
-		for (int i = 0; i < length; i++) {
-			char c = string.charAt(i);
-			if (string.startsWith("<ph", 1)) {
-				inTag = true;
-			}
-			if (string.startsWith("</ph>", i)) {
-				inTag = false;
-				i = i + 4;
-				continue;
-			}
-			if (!inTag) {
-				buffer.append(c);
-			}
-		}
-		return !buffer.toString().trim().isEmpty();
-	}
-
 }
